test/lambda/negative/syntax/unexpected_token.ls
// @expect-error: E103
// @description: Unexpected token in expression

let x = + * 5
